# PolarisEngine

./: .gitignore  .gitmodules  CMakeLists.txt  build-android-libs.bat  build-android-libs.cmake  build-android-libs.sh  library.cpp  library.h  test-android-ndk.bat
Source/Runtime/Core/: Application.cpp  Application.h  Engine.cpp  Engine.h  Logger.cpp
Source/Runtime/Core/Rendering/: PlatformRenderer.cpp  PlatformRenderer.h  PlatformRendering.cpp  PlatformRendering.h  SDLRenderer.cpp  SDLRenderer.h  VulkanRenderer.cpp  VulkanRenderer.h
source/runtime/core/: Application.cpp  Application.h  Engine.cpp  Logger.cpp  Logger.h
source/runtime/core/rendering/: PlatformRenderer.cpp  SDLRenderer.cpp  SDLRenderer.h  VideoRenderer.cpp  VideoRenderer.h
source/runtime/core/video/: FFmpegVideoDecoder.cpp  FFmpegVideoDecoder.h  VideoDecoder.cpp  VideoDecoder.h  VideoDecoderFactory.cpp  VideoDecoderFactory.h
